libs/extractor/tests/snapshots/all_tests__extract_conditional_style_props_with_class_name.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box as DevupButton} from '@devup-ui/core'\n        <DevupButton\n      className={className}\n      typography={typography}\n    >\n    </DevupButton>\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<div className={`${className || \"\"} ${typography ? `typo-${typography}` : \"\"}`}>\n    </div>;\n",
}
