libs/extractor/tests/snapshots/all_tests__extract_dynamic_responsive_style_props.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import { Box } from \"@devup-ui/core\";\n<Box padding={[someStyleVar,null,someStyleVar1]} margin={[null,someStyleVar2]} />;\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "margin",
                level: 1,
                identifier: "someStyleVar2",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 0,
                identifier: "someStyleVar",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "padding",
                level: 2,
                identifier: "someStyleVar1",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n<div className=\"a c e\" style={{\n\t\"--b\": someStyleVar,\n\t\"--d\": someStyleVar1,\n\t\"--f\": someStyleVar2\n}} />;\n",
}
